Aggiunto Rimozione in coda e rimozione in testa nella lista lincata